@@ -293,19 +293,19 @@
 </scannerConfigBuildInfo>
 </storageModule>
 
+<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 <storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
 <buildTargets>
 <target name="cmake" path="build" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
 <buildCommand>cmake</buildCommand>
 <buildArguments/>
-<buildTarget>.. -DCMAKE_BUILD_TYPE=Debug</buildTarget>
+<buildTarget>.. -DCMAKE_BUILD_TYPE=Debug -DENABLE_JACK=0</buildTarget>
 <stopOnError>true</stopOnError>
 <useDefaultCommand>false</useDefaultCommand>
 <runAllBuilders>true</runAllBuilders>
 </target>
 <target name="distclean" path="build" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
 <buildCommand>make</buildCommand>
-<buildArguments/>
 <buildTarget>distclean</buildTarget>
 <stopOnError>true</stopOnError>
 <useDefaultCommand>true</useDefaultCommand>
@@ -313,6 +313,7 @@
 </target>
 <target name="qmake" path="" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
 <buildCommand>qmake</buildCommand>
+<buildArguments/>
 <stopOnError>true</stopOnError>
 <useDefaultCommand>false</useDefaultCommand>
 <runAllBuilders>false</runAllBuilders>
